# digital-hormone-llm-benchmark

./: .gitignore  README.md
harness/: README.md  pyproject.toml
harness/configs/: experiment.example.yaml
harness/memory/: hormones.json
harness/schemas/: agent_step_action_schema.json  webarena_verified_agent_response_schema.json
harness/scripts/: aggregate_results.py  plot_hormones.py  plot_pareto.py  run_toy_demo.py
harness/src/hormone_harness/: __init__.py  controller.py  json_utils.py  logging.py  metrics.py
harness/src/hormone_harness/adapters/: __init__.py  anthropic.py  base.py  dummy.py  google.py  openai.py
harness/src/hormone_harness/runner/: __init__.py  toy_env.py  webarena_verified.py
harness/validation/: smoke_test_2026-02-14.txt
paper/: paper.tex  references.bib  refs.bib
paper/sections/: appendix_harness.tex  appendix_reproducibility.tex  conclusion.tex  discussion.tex  ethics.tex  experiments.tex  introduction.tex  method.tex  related_work.tex  results_placeholder.tex
