
[project]
name = "digital-hormone-harness"
version = "0.2.0"
description = "Experiment harness for tri-axis digital hormone control in LLM agents (paired ON/OFF evaluation)."
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.0.0",
  "pyyaml>=6.0",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
